--- a/style.css
+++ b/style.css
@@ -9,6 +9,20 @@ body, html {
 	font-family: 'Lora', serif;
 }
 
+a {
+	text-decoration: none;
+	color: rgb(181,132,46);
+}
+
+a:hover {
+	text-decoration: none;
+	color: white;
+}
+
+a:active {
+	color: rgb(181,132,46);
+}
+
 /*///////////////ND Header//////////*/
 
 #ndHeader {
@@ -40,6 +54,24 @@ a.fin {
 	margin: 0 auto;
 }
 
+/*///////////////Nav Bar//////////////*/
+
+#navBar {
+	font-family: serif;
+	position: absolute;
+	top: 60px;
+	color: white;
+	/*background-color: rgba(45, 44, 44, 0.7);*/
+	border-bottom-right-radius: 10px;
+	border-top-right-radius: 10px;
+}
+
+
+#navBar p {
+	margin: 0 auto;
+	padding: 20px;
+	display: inline-block;
+}
 
 /*///////////////Intro Div//////////////*/
 
@@ -56,25 +88,25 @@ a.fin {
 
 #mainLogo {
 	width: 60%;
-	margin: 0 20%;
-	padding: 15% 0 0 0;
+	margin: 0 20% 5% 20%;
+	padding: 10% 0 0 0;
 	height: 200px;
-	background: url('./images/logo.png') no-repeat center;
+	background: url('./images/logo.png') no-repeat bottom center;
 	background-size: contain;
 }
 
 #mainText {
 	color: white;
-	text-align: left;
-	padding: 0 15%;
+	text-align: justify;
+	padding: 0 13%;
 }
 
 strong {
 	position: relative;
 	display: inline-block;
 	color: rgb(181,132,46);
-	padding-left: 2%;
-	font-size: 2em;
+	padding-left: 3%;
+	font-size: 2.2em;
 }
 
 .headerText {
